--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         First Presbyterian Church<br>
                         602 Vermillion St., Hastings, MN 55033
                         <br><br>
-                        Traditional Ash Wednesday service. Option of ashes or glitter+ashes. Masks are strongly encouraged for all and are required of those not vaccinated and boosted.
+                        Traditional Ash Wednesday service, and the option of ashes or glitter+ashes. Masks are strongly encouraged for all and are required of those not vaccinated and boosted.
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-green">
@@ -146,7 +146,7 @@
                 the transgender and LGBTQ+
                 community and allies. Worshippers are offered a
                 mixture of ashes and glitter (or only ashes, if desired). You can be marked
-                on your forehead with a cross or, alternatively, a circle, symbolizing
+               with a cross or, alternatively, a circle, symbolizing
                 the circle of life and
                 death.</p>
             <p> The ritual offers
@@ -220,8 +220,9 @@
                <p>Organizers in the local faith community who will lead Glitter Ash Wednesday events include:</p>
                <ul>
                    <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
-                   <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>
                    <li>Rev. Steve Robertson, First Presbyterian Church, Hastings</li>
+                   <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>   
+                   <li>Rev. Dr. Jules Erickson, All Saints Lutheran Church, ELCA, Cottage Grove</li>
                 </ul>
                 <p>Other organizers include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. Supporting organizations include Hastings Thrive, Hastings Progressives, and Transforming Families.
             </p>
