--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 <div class="card border-gradient border-gradient-purple">
                     <p class="type">
                         Morning Glitter+Ash Service in the Park</p>
-                    <p class="details">Wednesday, March&nbsp;2, at 7:00&ndash;&#8288;7:30 a.m.<br>
+                    <p class="city">
+                    Hastings, MN</p>
+                    <p class="details">Wednesday, March&nbsp;2, 7:00&ndash;&#8288;7:30 a.m.<br>
                     Pioneer Park, at the corner of 15th and Pine<br>
                     801 15th St. W., Hastings, MN 55033<br><br>
                     Short service followed by imposition of ashes. Masks are required.<br><br>
@@ -76,8 +78,10 @@
                 <div class="card border-gradient border-gradient-red">
                     <p class="type">
                         Glitter+Ash on the Go</p>
+                        <p class="city">
+                            Hastings, MN</p>
                     <p class="details">
-                        Wednesday, March&nbsp;2, at 9:00 a.m.&ndash;&#8288;1:00 p.m.<br>
+                        Wednesday, March&nbsp;2, 9:00&ndash;&#8288;1:00<br>
                         Downtown Hastings, outside Level Up Games<br>
                         120 2nd St. E., Hastings, MN 55033<br><br>
                         Masks are required.
@@ -87,8 +91,10 @@
                 <div class="card border-gradient border-gradient-yellow">
                     <p class="type">
                         Morning Traditional Ash Wednesday Service</p>
+                        <p class="city">
+                            Hastings, MN</p>
                     <p class="details">
-                        Wednesday, March&nbsp;2, at 10:30 a.m.<br>
+                        Wednesday, March&nbsp;2, 10:30 a.m.<br>
                         First Presbyterian Church<br>
                         602 Vermillion St., Hastings, MN 55033
                         <br><br>
@@ -97,8 +103,10 @@
                 </div>
                 <div class="card border-gradient border-gradient-green">
                     <p class="type">Evening Ash Wednesday Service</p>
+                    <p class="city">
+                        Cottage Grove, MN</p>
                     <p class="details">
-                        Wednesday, March&nbsp;2, at 6:46 p.m.<br>
+                        Wednesday, March&nbsp;2, 6:46 p.m.<br>
                         All Saints Lutheran Church, ELCA<br>
                         8100 Belden Blvd, Cottage Grove, MN 55016<br><br>
                         This service has two stations: one with ashes; another with glitter+ashes. Masks are required.
