--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         <div class="container-page schedule">
             <div class="cards">
                 <div class="card border-gradient border-gradient-purple">
-                    <p class="type">
-                        Morning Glitter+Ash Service in the Park</p>
-                    <p class="city">
-                    Hastings, MN</p>
+                    <h3 class="type">
+                        Morning Glitter+Ash Service in the Park</h3>
+                    <h4 class="city">
+                    Hastings, MN</h4>
                     <p class="details">Wednesday, March&nbsp;2, 7:00&ndash;&#8288;7:30 a.m.<br>
                     Pioneer Park, at the corner of 15th and Pine<br>
                     801 15th St. W., Hastings, MN 55033<br><br>
@@ -76,10 +76,10 @@
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-red">
-                    <p class="type">
-                        Glitter+Ash on the Go</p>
-                        <p class="city">
-                            Hastings, MN</p>
+                    <h3 class="type">
+                        Glitter+Ash on the Go</h3>
+                        <h4 class="city">
+                            Hastings, MN</h4>
                     <p class="details">
                         Wednesday, March&nbsp;2, 9 a.m.&ndash;&#8288;1 p.m.<br>
                         Downtown Hastings, outside Level Up Games<br>
@@ -89,10 +89,10 @@
                   
                 </div>
                 <div class="card border-gradient border-gradient-yellow">
-                    <p class="type">
-                        Morning Traditional Ash Wednesday Service</p>
-                        <p class="city">
-                            Hastings, MN</p>
+                    <h3 class="type">
+                        Morning Traditional Ash Wednesday Service</h3>
+                        <h4 class="city">
+                            Hastings, MN</h4>
                     <p class="details">
                         Wednesday, March&nbsp;2, 10:30 a.m.<br>
                         First Presbyterian Church<br>
@@ -102,9 +102,9 @@
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-green">
-                    <p class="type">Evening Ash Wednesday Service</p>
-                    <p class="city">
-                        Cottage Grove, MN</p>
+                    <h3 class="type">Evening Ash Wednesday Service</h3>
+                    <h4 class="city">
+                        Cottage Grove, MN</h4>
                     <p class="details">
                         Wednesday, March&nbsp;2, 6:46 p.m.<br>
                         All Saints Lutheran Church, ELCA<br>
