--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     Hastings, MN</h4>
                     <p class="details">Wednesday, March&nbsp;2, 7:00&ndash;&#8288;7:30&nbsp;a.m.<br>
                     Pioneer Park, at the corner of 15th and Pine<br>
-                    <a href="http://maps.google.com/?q=801 15th St. W., Hastings, MN 55033">801 15th St. W., Hastings, MN 55033</a><br><br>
+                    <a class="details" href="http://maps.google.com/?q=801 15th St. W., Hastings, MN 55033">801 15th St. W., Hastings, MN 55033</a><br><br>
                    
 
                     Short service followed by imposition of ashes. Masks are required.<br><br>
@@ -85,7 +85,7 @@
                     <p class="details">
                         Wednesday, March&nbsp;2, 9&nbsp;a.m.&ndash;&#8288;1&nbsp;p.m.<br>
                         Downtown Hastings, outside Level Up Games<br>
-                        <a href="http://maps.google.com/?q=120 2nd St. E., Hastings, MN 55033">120 2nd St. E., Hastings, MN 55033</a><br><br>
+                        <a class="details" href="http://maps.google.com/?q=120 2nd St. E., Hastings, MN 55033">120 2nd St. E., Hastings, MN 55033</a><br><br>
 
                         Masks are required.
                     </p>
@@ -99,7 +99,7 @@
                     <p class="details">
                         Wednesday, March&nbsp;2, 10:30&nbsp;a.m.<br>
                         First Presbyterian Church<br>
-                        <a href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">602 Vermillion St., Hastings, MN 55033</a><br><br>
+                        <a class="details" href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">602 Vermillion St., Hastings, MN 55033</a><br><br>
 
                         Traditional Ash Wednesday service. Option of ashes or glitter+ashes. Masks are strongly encouraged for all and are required for those not vaccinated and boosted.
                     </p>
@@ -111,7 +111,7 @@
                     <p class="details">
                         Wednesday, March&nbsp;2, 6:46&nbsp;p.m.<br>
                         All Saints Lutheran Church, ELCA<br>
-                        <a href="http://maps.google.com/?q=8100 Belden Blvd, Cottage Grove, MN 55016">8100 Belden Blvd., Cottage Grove, MN 55016</a><br><br>
+                        <a class="details" href="http://maps.google.com/?q=8100 Belden Blvd, Cottage Grove, MN 55016">8100 Belden Blvd., Cottage Grove, MN 55016</a><br><br>
                         
                         This service has two stations: one with ashes; another with glitter+ashes. Masks are required.
                     </p>
