--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 Christians an invitation to show up, or &#8220;come out,&#8221; as faith affirming and LGBTQ+ affirming.</p>
 
                 <p>&#8220;Glitter Ash Wednesday beckons me to a Christian practice that is not only affirming of LGBTQ folks, but open to being changed by joining with them in Sacred Community,&#8221; says 
-                    Rev. Michael Le Buhn Jr., an event co-organizer.</p>
+                    Rev. Michael Le Buhn Jr. of Hastings, MN, a co-organizer of the event.</p>
 
             <h2>What does it mean?</h2>
             <p>The ritual captures the relationship between Ash Wednesday and Easter, which is the relationship
@@ -198,10 +198,10 @@
                     exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. </p>
 
                     <p>Glitter Ash Wednesday joyfully claims the power of radical inclusivity and of allies standing in solidarity with
-                        targeted communities. When we
+                        targeted communities. &#8220;When we
                         participate in Glitter Ash Wednesday, we stand with Christians who unequivocally affirm that all of us, including transgender, 
                         nonbinary, and LGBTQ+ people, 
-                        are wholly sacred and fully welcome to participate in the life of the church.</p>
+                        are wholly sacred and fully welcome to participate in the life of the church,&#8221; says co-organizer Valerie Stoehr of Afton Indivisible.</p>
               
 
             <h2>Consider choosing a Lenten action</h2>
@@ -236,7 +236,10 @@
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>   
                    <li>Rev. Dr. Jules Erickson, All Saints Lutheran Church, ELCA, Cottage Grove</li>
                 </ul>
-                <p>Other organizers include Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. Supporting organizations include Hastings Thrive, Hastings Progressives, and Transforming Families.
+                <p>The event is organized by local faith leaders in coalition with 
+                    Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. 
+                    Supporting organizations include Hastings Thrive, Hastings Progressives, and Transforming Families. 
+
             </p>
           
             <h2>Who can participate?</h2>
