--- a/index.html
+++ b/index.html
@@ -197,11 +197,14 @@
                     the LGBTQ+ community in the ritual, recognizing that many Christian traditions have attempted to
                     exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. </p>
 
+
+                    <p>&#8220;As allies of the LGBTQI+ community, we believe that our worship can be both a continuation of traditional sacred practices and welcoming and affirming of all at the same time,&#8221; says Pastor Steve Robertson of First Presbyterian Church in Hastings, MN.</p>
+
                     <p>Glitter Ash Wednesday joyfully claims the power of radical inclusivity and of allies standing in solidarity with
                         targeted communities. &#8220;When we
-                        participate in Glitter Ash Wednesday, we stand with Christians who unequivocally affirm that all of us, including transgender, 
+                        participate in Glitter Ash Wednesday,&#8221; says co-organizer Valerie Stoehr of Afton Indivisible, &#8220;we stand with Christians who unequivocally affirm that all of us, including transgender, 
                         nonbinary, and LGBTQ+ people, 
-                        are wholly sacred and fully welcome to participate in the life of the church,&#8221; says co-organizer Valerie Stoehr of Afton Indivisible.</p>
+                        are wholly sacred and fully welcome to participate in the life of the church.&#8221;</p>
               
 
             <h2>Consider choosing a Lenten action</h2>
