--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     Short (about 15-minute) service followed by imposition of ashes. Masks are required.<br><br>
                    In case of bad weather we'll post an update here and move to <a class="details" href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">First
-                    Presbyterian Church</a>, Hastings.</p>
+                    Presbyterian Church</a> in Hastings.</p>
                       
                     </p>
                 </div>
@@ -198,7 +198,9 @@
                     exclude that community from Christianity or have perpetrated harm against LGBTQ+ people. </p>
 
 
-                    <p>&#8220;As allies of the LGBTQI+ community, we believe that our worship can be both a continuation of traditional sacred practices and welcoming and affirming of all at the same time,&#8221; says Pastor Steve Robertson of First Presbyterian Church in Hastings, MN.</p>
+                    <p>&#8220;As allies of the LGBTQI+ community, we believe that our worship can be both a continuation of 
+                        traditional sacred practices and welcoming and affirming of all at the same time,&#8221; says co-organizer 
+                        Pastor Steve Robertson of First Presbyterian Church in Hastings, MN.</p>
 
                     <p>Glitter Ash Wednesday joyfully claims the power of radical inclusivity and of allies standing in solidarity with
                         targeted communities. &#8220;When we
@@ -235,12 +237,12 @@
                <p>Organizers in the local faith community who will lead Glitter Ash Wednesday events include:</p>
                <ul>
                    <li>Rev. Michael Le Buhn Jr., Christian Church (Disciples of Christ)</li>
-                   <li>Rev. Steve Robertson, First Presbyterian Church, Hastings</li>
-                   <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove</li>   
-                   <li>Rev. Dr. Jules Erickson, All Saints Lutheran Church, ELCA, Cottage Grove</li>
+                   <li>Rev. Steve Robertson, First Presbyterian Church, Hastings, MN</li>
+                   <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove, MN</li>   
+                   <li>Rev. Dr. Jules Erickson, All Saints Lutheran Church, ELCA, Cottage Grove, MN</li>
                 </ul>
-                <p>The event is organized by local faith leaders in coalition with 
-                    Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. 
+                <p>The event is organized by a coalition of local faith leaders; 
+                    Hastings IDEA: Inclusion, Diversity & Equality Alliance; and Afton Indivisible. 
                     Supporting organizations include Hastings Thrive, Hastings Progressives, and Transforming Families. 
 
             </p>
