--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 <!-- <img src="images/AftonIndivisibleLogo_Stacked_ForDarkBackground.png" height=30px> -->
                
 
-                <h1 class="hero-text1"> On March&nbsp;2, glitter and ashes show support for the LGBTQ+
-                    community.<br><br>Join us.</h1>
+                <h1 class="hero-text1"> On March&nbsp;2, glitter and ashes show support for the LGBTQIA community.<br><br>Join us.</h1>
         </section>
     </header>
 
