--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </p>
           
             <h2>Who can participate?</h2>
-            <p> Everyone is welcome! You do not need to be Christian or a member of the LGBTQIA community to
+            <p> Everyone is welcome! You do not need to be Christian or a member of the LGBTQIA+ community to
                 participate.
             </p>
 
