--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
                         (coming
                         soon!)</a>
                 </li> -->
-                <li>See the program for the 7:00 a.m. morning service
+               <!-- <li>See the program for the 7:00 a.m. morning service
                     (coming
                     soon!)</a>
-                </li>
+                </li> -->
 
 
                 <li><a name="flyer"></a>Need a flyer to help get the word out? </a><a type="application/pdf"
