--- a/index.html
+++ b/index.html
@@ -240,11 +240,12 @@
                    <li>Rev. Tanner Howard, All Saints Lutheran Church, ELCA, Cottage Grove, MN</li>   
                    <li>Rev. Dr. Jules Erickson, All Saints Lutheran Church, ELCA, Cottage Grove, MN</li>
                 </ul>
-                <p>The event is organized by a coalition of local faith leaders with  
-                    Hastings IDEA: Inclusion, Diversity & Equality Alliance and Afton Indivisible. 
-                    Supporting organizations include Hastings Thrive, Hastings Progressives, and Transforming Families. 
+           <p>The event is organized by a coalition of local faith leaders, 
+                        Hastings IDEA (Inclusion, Diversity & Equality Alliance), and Afton Indivisible.
+                        Supporting organizations include Hastings Thrive, Hastings Progressives, Transforming Families,
+                        and RECLAIM.
 
-            </p>
+                    </p>
           
             <h2>Who can participate?</h2>
             <p> Everyone is welcome! You do not need to be Christian or a member of the LGBTQIA+ community to
