--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h4 class="city">
                     Hastings, MN</h4>
                     <p class="details">Wednesday, March&nbsp;2, 7:00&nbsp;a.m.<br>
-                    Pioneer Park, at the corner of 15th and Pine<br>
+                    Pioneer Park, at the corner of 15th St. W. and Pine St.<br>
                     <a class="details" href="http://maps.google.com/?q=801 15th St. W., Hastings, MN 55033">801 15th St. W., Hastings, MN 55033</a><br><br>
                    
 
