--- a/index.html
+++ b/index.html
@@ -65,15 +65,18 @@
                         Morning Glitter+Ash Service in the Park</h3>
                     <h4 class="city">
                     Hastings, MN</h4>
-                    <p class="details">Wednesday, March&nbsp;2, 7:00&nbsp;a.m.<br>
-                    Pioneer Park, at the corner of 15th St. W. and Pine St.<br>
-                    <a class="details" href="http://maps.google.com/?q=801 15th St. W., Hastings, MN 55033">801 15th St. W., Hastings, MN 55033</a><br><br>
-                   
+                   <p class="details">Wednesday, March&nbsp;2, 7:00&nbsp;a.m.<br>
+                        Pioneer Park, at the corner of 15th St. W. and Pine St.<br>
+                        <a class="details" href="http://maps.google.com/?q=801 15th St. W., Hastings, MN 55033">801 15th
+                            St. W., Hastings, MN 55033</a><br><br>
 
-                    Short (about 15-minute) service followed by imposition of ashes. Masks are required.<br><br>
-                   In case of bad weather we'll post an update here and move to <a class="details" href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">First
-                    Presbyterian Church</a> in Hastings.</p>
-                      
+
+                        Short (about 15-minute) service followed by imposition of ashes. Masks are required.<br><br>
+                        <a href="program.html">View the program here</a><br><br>
+                        In case of bad weather we'll post an update here and move to <a class="details"
+                            href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">First
+                            Presbyterian Church</a> in Hastings.</p>
+
                     </p>
                 </div>
                 <div class="card border-gradient border-gradient-red">
