--- a/program.html
+++ b/program.html
@@ -41,9 +41,9 @@
 
 
                 <h1>Glitter Ash Wednesday Online Program</h1>
-                <p>This is an online version of the program distributed at the 7 AM Glitter Ash Wednesday service in
+                  <p>This is an adaptation of the program distributed at the 7 AM Glitter Ash Wednesday service in
                     Pioneer
-                    Park.</p>
+                    Park. This version of the program is optimized for online viewing.</p>
                 <p><strong>
                         Ash Wednesday<br>
                         March 2, 2022<br>
