--- a/program.html
+++ b/program.html
@@ -43,7 +43,7 @@
                 <h1>Glitter Ash Wednesday Online Program</h1>
                   <p>This is a modification of the program distributed at the 7 AM Glitter Ash Wednesday service in
                     Pioneer
-                    Park in Hastings, MN. This version of the program is optimized for online viewing.</p>
+                    Park in Hastings, MN. This version is optimized for online viewing.</p>
                 <p><strong>
                         Ash Wednesday<br>
                         March 2, 2022<br>
