--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
 
                         Short (about 15-minute) service followed by imposition of ashes. Masks are required.<br><br>
-                        <a href="program.html">View the program here</a><br><br>
+                       
+                        <!-- <a href="program.html">View the program here</a><br><br> -->
+                       
                         In case of bad weather we'll post an update here and move to <a class="details"
                             href="http://maps.google.com/?q=602 Vermillion St., Hastings, MN 55033">First
                             Presbyterian Church</a> in Hastings.</p>
