--- a/program.html
+++ b/program.html
@@ -35,13 +35,18 @@
 <body>
 
     <header>
-        <section>
+           <section>
+            <div class="nav-container">
+                <p class="nav container-page"><a class="nav" href="index.html">Go to Glitter Ash Wednesday home page</a>
+                </p>
+            </div>
             <div class="container-page">
                 <!-- <img src="images/glitterash_logo_crossonly_transp_color.png" alt="glitter cross" width="30%"> -->
 
 
+
                 <h1>Glitter Ash Wednesday Online Program</h1>
-                  <p>This is an online version of the program distributed at the 7 AM Glitter Ash Wednesday service in
+                <p>This is an online version of the program distributed at the 7 AM Glitter Ash Wednesday service in
                     Pioneer
                     Park in Hastings, MN.</p>
                 <p><strong>
@@ -49,9 +54,7 @@
                         March 2, 2022<br>
                         Pioneer Park, Hastings, MN
                     </strong></p>
-                <p>To see information about all the 2022 Glitter Ash Wednesday events in Hastings and Cottage Grove,
-                    Minnesota, see
-                    <a href="http://www.GlitterAshWednesdayMN.org">www.GlitterAshWednesdayMN.org</a>.</p>
+
         </section>
     </header>
 
