--- a/index.html
+++ b/index.html
@@ -269,10 +269,9 @@
                         (coming
                         soon!)</a>
                 </li> -->
-               <!-- <li>See the program for the 7:00 a.m. morning service
-                    (coming
-                    soon!)</a>
-                </li> -->
+           <li><a href="program.html">See the program</a> for the 7:00 a.m. morning service
+
+                        </li>
 
 
                 <li><a name="flyer"></a>Need a flyer to help get the word out? </a><a type="application/pdf"
