--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
 
-        <p class="container-page hero-text2">Mark your calendar for Wednesday, March&nbsp;2, 2022, when progressive,
+        <p class="container-page hero-text2">Mark your calendar for March&nbsp;2, 2022, when progressive,
             trans-positive, and queer-positive Christians are invited to make their values and beliefs visible. It's
             called Glitter Ash Wednesday. </p>
 
